syntax = "proto3";

package user;

service User {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc SetPassword(SetPasswordRequest) returns (Empty);
    rpc Delete(DeleteRequest) returns (Empty);
    rpc Create(CreateRequest) returns (Empty);
}

message LoginRequest {
    string email = 1;
    string password = 2;
    double expires_in = 3;
}

message LoginResponse {
    string token = 1;
}

message SetPasswordRequest {
    string password = 1;
}

message DeleteRequest {
    string email = 1;
}

message CreateRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    bool admin = 4;
}

message Empty {}
